--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,13 @@
     "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^5.8.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "winston": "^3.11.0",
-    "@prisma/client": "^5.8.0"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
