--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,17 @@
 FROM node:20-alpine
 
+RUN apk add --no-cache openssl
+
 WORKDIR /app
 
 COPY package*.json ./
+COPY prisma ./prisma/
+
 RUN npm install
+RUN npx prisma generate
 
 COPY . .
 
 EXPOSE 5000
 
-CMD ["npm", "start"]
+CMD npx prisma migrate deploy && npm start
