--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,23 @@
-version: '3.8'
-
 services:
-  app:
-    build: .
+  backend:
+    build: ./backend
     ports:
-      - "3000:3000"
+      - "5000:5000"
     env_file:
-      - .env
+      - ./backend/.env
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "3001:80"
+    depends_on:
+      backend:
+        condition: service_healthy
+    restart: unless-stopped
