feat: integrate Cloudflare R2 for image storage and processing
- Added AWS SDK dependencies for S3 and request presigner.
- Updated configuration to include R2 credentials and settings.
- Implemented S3 client for R2 in a new s3.js config file.
- Created image repository for uploading images to R2.
- Enhanced product service to handle image uploads and validations.
- Added new endpoints for creating, updating, and deleting products.
- Introduced image processing utilities using sharp.
- Updated frontend forms to accommodate new product fields.
- Created deployment scripts and Docker configurations for production.
- Set up Nginx with rate limiting and security headers.
- Implemented SSL setup script for secure connections.
- Added monitoring script for system and service health checks.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,21 @@ lerna-debug.log*
 **/dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.production
+.env.*.local
+**/.env
+**/.env.local
+**/.env.production
+**/.env.*.local
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +37,18 @@ lerna-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Build outputs
+build/
+dist/
+.next/
+out/
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+.cache/
+.temp/
+.tmp/
