--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "format:check": "prettier --check \"src/**/*.js\""
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.995.0",
+    "@aws-sdk/s3-request-presigner": "^3.995.0",
     "@prisma/client": "^5.8.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -20,13 +22,14 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
     "redis": "^4.6.13",
+    "sharp": "^0.34.5",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "prisma": "^5.8.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.2.5"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.2.5",
+    "prisma": "^5.8.0"
   }
 }
