--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,69 @@
-name: Deploy
+name: Deploy to VM
 
 on:
   push:
     branches: [main]
+  workflow_dispatch:
+
+env:
+  REGISTRY: docker.io
+  IMAGE_NAME: vividvitablendsdev/vividvitablends
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Deploy
-        run: echo "Add deployment steps here"
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          tags: |
+            ${{ env.IMAGE_NAME }}:backend-latest
+            ${{ env.IMAGE_NAME }}:backend-${{ github.sha }}
+          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:backend-latest
+          cache-to: type=inline
+
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: |
+            ${{ env.IMAGE_NAME }}:frontend-latest
+            ${{ env.IMAGE_NAME }}:frontend-${{ github.sha }}
+          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:frontend-latest
+          cache-to: type=inline
+
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to VM
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USERNAME }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          port: ${{ secrets.VM_PORT || 22 }}
+          script: |
+            cd /opt/vivid_vitablends
+            git pull origin main
+            chmod +x deploy.sh
+            ./deploy.sh
+
+      - name: Health Check
+        run: |
+          sleep 30
+          curl -f http://${{ secrets.VM_HOST }}:8000/api/health || exit 1
