fix: update to Docker Compose V2 and handle git conflicts in deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,8 @@ jobs:
               git clone https://github.com/${{ github.repository }} .
             else
               cd /opt/vivid_vitablends
-              git pull origin main
+              git fetch origin
+              git reset --hard origin/main
             fi
             
             chmod +x deploy.sh
