--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,7 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
           port: ${{ secrets.VM_PORT || 22 }}
+          envs: DOCKER_USERNAME,DOCKER_PASSWORD
           script: |
             # Check Docker Compose availability
             echo "🔍 Checking Docker Compose..."
@@ -87,6 +88,9 @@ jobs:
             
             chmod +x deploy.sh
             ./deploy.sh
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Health Check
         run: |
