--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,7 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
           port: ${{ secrets.VM_PORT || 22 }}
-          envs: DOCKER_USERNAME,DOCKER_PASSWORD
+          envs: DOCKER_USERNAME,DOCKER_PASSWORD,DATABASE_URL,JWT_SECRET
           script: |
             # Check Docker Compose availability
             echo "🔍 Checking Docker Compose..."
@@ -86,11 +86,26 @@ jobs:
               git reset --hard origin/main
             fi
             
+            # Create production environment file
+            echo "🔧 Creating production environment file..."
+            cat > backend/.env.production << EOF
+            NODE_ENV=production
+            PORT=5000
+            DATABASE_URL="${DATABASE_URL}"
+            DIRECT_URL="${DATABASE_URL}"
+            JWT_SECRET="${JWT_SECRET}"
+            JWT_EXPIRES_IN=86400
+            REDIS_ENABLED=false
+            REDIS_TTL=3600
+            EOF
+            
             chmod +x deploy.sh
             ./deploy.sh
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
       - name: Health Check
         run: |
