fix: use quoted heredoc delimiter to avoid YAML syntax error

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
             
             # Create production environment file
             echo "🔧 Creating production environment file..."
-            cat > backend/.env.production <<EOF
+            cat > backend/.env.production << 'ENVEOF'
 NODE_ENV=production
 PORT=5000
 DATABASE_URL="${DATABASE_URL}"
@@ -97,7 +97,9 @@ JWT_SECRET="${JWT_SECRET}"
 JWT_EXPIRES_IN=86400
 REDIS_ENABLED=false
 REDIS_TTL=3600
-EOF
+ENVEOF
+            sed -i "s/\${DATABASE_URL}/${DATABASE_URL}/g" backend/.env.production
+            sed -i "s/\${JWT_SECRET}/${JWT_SECRET}/g" backend/.env.production
             
             chmod +x deploy.sh
             ./deploy.sh
