--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,18 +88,14 @@ jobs:
             
             # Create production environment file
             echo "🔧 Creating production environment file..."
-            cat > backend/.env.production << 'ENVEOF'
-NODE_ENV=production
-PORT=5000
-DATABASE_URL="${DATABASE_URL}"
-DIRECT_URL="${DATABASE_URL}"
-JWT_SECRET="${JWT_SECRET}"
-JWT_EXPIRES_IN=86400
-REDIS_ENABLED=false
-REDIS_TTL=3600
-ENVEOF
-            sed -i "s/\${DATABASE_URL}/${DATABASE_URL}/g" backend/.env.production
-            sed -i "s/\${JWT_SECRET}/${JWT_SECRET}/g" backend/.env.production
+            echo "NODE_ENV=production" > backend/.env.production
+            echo "PORT=5000" >> backend/.env.production
+            echo "DATABASE_URL=${DATABASE_URL}" >> backend/.env.production
+            echo "DIRECT_URL=${DATABASE_URL}" >> backend/.env.production
+            echo "JWT_SECRET=${JWT_SECRET}" >> backend/.env.production
+            echo "JWT_EXPIRES_IN=86400" >> backend/.env.production
+            echo "REDIS_ENABLED=false" >> backend/.env.production
+            echo "REDIS_TTL=3600" >> backend/.env.production
             
             chmod +x deploy.sh
             ./deploy.sh
