fix: increase timeout and use npx prisma migrate deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,7 @@ jobs:
           username: ${{ secrets.VM_USERNAME }}
           key: ${{ secrets.VM_SSH_KEY }}
           port: ${{ secrets.VM_PORT || 22 }}
+          command_timeout: 15m
           envs: DOCKER_USERNAME,DOCKER_PASSWORD,DATABASE_URL,JWT_SECRET
           script: |
             # Check Docker Compose availability
