--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,12 +88,12 @@ jobs:
             fi
             
             # Create production environment file
-            echo "🔧 Setting environment variables..."
-            export DATABASE_URL="${DATABASE_URL}"
-            export JWT_SECRET="${JWT_SECRET}"
+            echo "🔧 Creating .env file for docker-compose..."
+            echo "DATABASE_URL=${DATABASE_URL}" > .env
+            echo "JWT_SECRET=${JWT_SECRET}" >> .env
             
             chmod +x deploy.sh
-            DATABASE_URL="${DATABASE_URL}" JWT_SECRET="${JWT_SECRET}" ./deploy.sh
+            ./deploy.sh
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
