--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,8 +32,15 @@ services:
     image: vividvitablendsdev/vividvitablends:backend-latest
     expose:
       - "5000"
-    env_file:
-      - ./backend/.env.production
+    environment:
+      NODE_ENV: production
+      PORT: 5000
+      DATABASE_URL: ${DATABASE_URL}
+      DIRECT_URL: ${DATABASE_URL}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_EXPIRES_IN: 86400
+      REDIS_ENABLED: false
+      REDIS_TTL: 3600
     depends_on:
       postgres:
         condition: service_healthy
