fix: add DIRECT_URL env var and optimize deployment for low-memory servers

--- a/.env.deploy.example
+++ b/.env.deploy.example
@@ -1,2 +1,10 @@
-DOCKER_USERNAME=vividvitablendsdev
-DOCKER_PASSWORD=your_dockerhub_password_or_token
+# Docker Hub credentials (optional, for private images)
+DOCKER_USERNAME=
+DOCKER_PASSWORD=
+
+# Database configuration
+DATABASE_URL=postgresql://postgres:vivid_secure_password_2024@postgres:5432/vivid_vitablends
+DIRECT_URL=postgresql://postgres:vivid_secure_password_2024@postgres:5432/vivid_vitablends
+
+# JWT configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32-chars
