--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,8 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
+    mem_limit: 256m
+    mem_reservation: 128m
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -27,6 +29,8 @@ services:
       - backend
       - frontend
     restart: always
+    mem_limit: 64m
+    mem_reservation: 32m
 
   backend:
     image: vividvitablendsdev/vividvitablends:backend-latest
@@ -36,15 +40,18 @@ services:
       NODE_ENV: production
       PORT: 5000
       DATABASE_URL: ${DATABASE_URL}
-      DIRECT_URL: ${DATABASE_URL}
+      DIRECT_URL: ${DIRECT_URL:-${DATABASE_URL}}
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRES_IN: 86400
       REDIS_ENABLED: false
       REDIS_TTL: 3600
+      NODE_OPTIONS: --max-old-space-size=256
     depends_on:
       postgres:
         condition: service_healthy
     restart: always
+    mem_limit: 384m
+    mem_reservation: 256m
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5000/api/health"]
       interval: 30s
@@ -56,6 +63,8 @@ services:
     expose:
       - "80"
     restart: always
+    mem_limit: 128m
+    mem_reservation: 64m
 
 volumes:
   postgres_data:
