--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,16 +35,25 @@ http {
         server frontend:80;
     }
 
-    # HTTP redirect to HTTPS (uncomment when SSL is configured)
-    # server {
-    #     listen 80;
-    #     server_name your-domain.com;
-    #     return 301 https://$server_name$request_uri;
-    # }
-
+    # HTTP redirect to HTTPS
     server {
         listen 80;
         server_name _;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl http2;
+        server_name _;
+
+        # SSL configuration
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
@@ -83,17 +92,4 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
-
-    # HTTPS configuration (uncomment and configure when SSL is ready)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name your-domain.com;
-    #
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers HIGH:!aNULL:!MD5;
-    #
-    #     # Same location blocks as above
-    # }
 }
